--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "firebase": "^5.8.2",
+    "moment": "^2.24.0",
     "npm": "^6.7.0",
     "vue": "^2.5.22",
     "vue-router": "^3.0.1",
